// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createIdList from KdB alt data should match the expected result 1`] = `
Array [
  "GC22201",
  "GC41103",
  "GC41203",
  "GC51701",
  "GC51901",
  "GC52701",
  "GC53401",
  "GC55401",
]
`;

exports[`createIdList from TWINS data should match the expected result 1`] = `
Array [
  "GC51701",
  "GC51901",
  "GC52701",
  "GC53401",
  "GC55401",
]
`;

exports[`parseCSV should match the expected result 1`] = `
"BEGIN:VCALENDAR
PRODID:-//gam0022//TwinC 1.0//EN
VERSION:2.0
CALSCALE:GREGORIAN
METHOD:PUBLISH
X-WR-CALNAME:授業時間割
X-WR-TIMEZONE:Asia/Tokyo
X-WR-CALDESC:授業時間割
BEGIN:VTIMEZONE
TZID:Asia/Tokyo
X-LIC-LOCATION:Asia/Tokyo
BEGIN:STANDARD
TZOFFSETFROM:+0900
TZOFFSETTO:+0900
TZNAME:JST
DTSTART:19700102T000000
END:STANDARD
END:VTIMEZONE
BEGIN:VEVENT
DTSTART;TZID=Asia/Tokyo:20251007T084000
DTEND;TZID=Asia/Tokyo:20251007T095500
RRULE:FREQ=WEEKLY;UNTIL=20251219T130000Z;BYDAY=TU
EXDATE:20251013T084000,20251016T084000,20251103T084000,20251104T084000,20251105T084000,20251107T084000,20251124T084000,20251125T084000,20251126T084000,20251127T084000,20251128T084000,
DTSTAMP:20250408T000000
CREATED:20250408T000000
DESCRIPTION:GE62401, GE72701と同一。 英語で授業。 G科目. 対面(オンライン併用型) 情報メディア創成学類生はGC55301を、知識情報システム主専攻生はGE72701を、それ以外の学生はGE62401を履修すること。
LAST-MODIFIED:20250408T000000
LOCATION:7A103
SEQUENCE:0
STATUS:CONFIRMED
SUMMARY:Machine Learning and Information Retrieval
TRANSP:OPAQUE
END:VEVENT
BEGIN:VEVENT
DTSTART;TZID=Asia/Tokyo:20251105T084000
DTEND;TZID=Asia/Tokyo:20251105T095500
DTSTAMP:20250408T000000
CREATED:20250408T000000
DESCRIPTION:GE62401, GE72701と同一。 英語で授業。 G科目. 対面(オンライン併用型) 情報メディア創成学類生はGC55301を、知識情報システム主専攻生はGE72701を、それ以外の学生はGE62401を履修すること。
LAST-MODIFIED:20250408T000000
LOCATION:7A103
SEQUENCE:0
STATUS:CONFIRMED
SUMMARY:Machine Learning and Information Retrieval
TRANSP:OPAQUE
END:VEVENT
BEGIN:VEVENT
DTSTART;TZID=Asia/Tokyo:20251007T101000
DTEND;TZID=Asia/Tokyo:20251007T112500
RRULE:FREQ=WEEKLY;UNTIL=20251219T130000Z;BYDAY=TU
EXDATE:20251013T101000,20251016T101000,20251103T101000,20251104T101000,20251105T101000,20251107T101000,20251124T101000,20251125T101000,20251126T101000,20251127T101000,20251128T101000,
DTSTAMP:20250408T000000
CREATED:20250408T000000
DESCRIPTION:GE62401, GE72701と同一。 英語で授業。 G科目. 対面(オンライン併用型) 情報メディア創成学類生はGC55301を、知識情報システム主専攻生はGE72701を、それ以外の学生はGE62401を履修すること。
LAST-MODIFIED:20250408T000000
LOCATION:7A103
SEQUENCE:0
STATUS:CONFIRMED
SUMMARY:Machine Learning and Information Retrieval
TRANSP:OPAQUE
END:VEVENT
BEGIN:VEVENT
DTSTART;TZID=Asia/Tokyo:20251105T101000
DTEND;TZID=Asia/Tokyo:20251105T112500
DTSTAMP:20250408T000000
CREATED:20250408T000000
DESCRIPTION:GE62401, GE72701と同一。 英語で授業。 G科目. 対面(オンライン併用型) 情報メディア創成学類生はGC55301を、知識情報システム主専攻生はGE72701を、それ以外の学生はGE62401を履修すること。
LAST-MODIFIED:20250408T000000
LOCATION:7A103
SEQUENCE:0
STATUS:CONFIRMED
SUMMARY:Machine Learning and Information Retrieval
TRANSP:OPAQUE
END:VEVENT
BEGIN:VEVENT
DTSTART;TZID=Asia/Tokyo:20251007T151500
DTEND;TZID=Asia/Tokyo:20251007T163000
RRULE:FREQ=WEEKLY;UNTIL=20251219T130000Z;BYDAY=TU
EXDATE:20251013T151500,20251016T151500,20251103T151500,20251104T151500,20251105T151500,20251107T151500,20251124T151500,20251125T151500,20251126T151500,20251127T151500,20251128T151500,
DTSTAMP:20250408T000000
CREATED:20250408T000000
DESCRIPTION:対面
LAST-MODIFIED:20250408T000000
LOCATION:7A105
SEQUENCE:0
STATUS:CONFIRMED
SUMMARY:システム運用・管理
TRANSP:OPAQUE
END:VEVENT
BEGIN:VEVENT
DTSTART;TZID=Asia/Tokyo:20251105T151500
DTEND;TZID=Asia/Tokyo:20251105T163000
DTSTAMP:20250408T000000
CREATED:20250408T000000
DESCRIPTION:対面
LAST-MODIFIED:20250408T000000
LOCATION:7A105
SEQUENCE:0
STATUS:CONFIRMED
SUMMARY:システム運用・管理
TRANSP:OPAQUE
END:VEVENT
BEGIN:VEVENT
DTSTART;TZID=Asia/Tokyo:20251001T084000
DTEND;TZID=Asia/Tokyo:20251001T095500
RRULE:FREQ=WEEKLY;UNTIL=20251219T130000Z;BYDAY=WE
EXDATE:20251013T084000,20251016T084000,20251103T084000,20251104T084000,20251105T084000,20251107T084000,20251124T084000,20251125T084000,20251126T084000,20251127T084000,20251128T084000,
DTSTAMP:20250408T000000
CREATED:20250408T000000
DESCRIPTION:「情報通信概論」(2018年度以前入学者対象)、もしくは「コンピュータネットワーク」(2019年度以降入学者対象)を履修していることが望ましい。 対面
LAST-MODIFIED:20250408T000000
LOCATION:ユニオン講義室
SEQUENCE:0
STATUS:CONFIRMED
SUMMARY:通信ネットワーク
TRANSP:OPAQUE
END:VEVENT
BEGIN:VEVENT
DTSTART;TZID=Asia/Tokyo:20251001T101000
DTEND;TZID=Asia/Tokyo:20251001T112500
RRULE:FREQ=WEEKLY;UNTIL=20251219T130000Z;BYDAY=WE
EXDATE:20251013T101000,20251016T101000,20251103T101000,20251104T101000,20251105T101000,20251107T101000,20251124T101000,20251125T101000,20251126T101000,20251127T101000,20251128T101000,
DTSTAMP:20250408T000000
CREATED:20250408T000000
DESCRIPTION:「情報通信概論」(2018年度以前入学者対象)、もしくは「コンピュータネットワーク」(2019年度以降入学者対象)を履修していることが望ましい。 対面
LAST-MODIFIED:20250408T000000
LOCATION:ユニオン講義室
SEQUENCE:0
STATUS:CONFIRMED
SUMMARY:通信ネットワーク
TRANSP:OPAQUE
END:VEVENT
BEGIN:VEVENT
DTSTART;TZID=Asia/Tokyo:20251001T121500
DTEND;TZID=Asia/Tokyo:20251001T133000
RRULE:FREQ=WEEKLY;UNTIL=20260205T130000Z;BYDAY=WE
EXDATE:20251013T121500,20251016T121500,20251103T121500,20251104T121500,20251105T121500,20251107T121500,20251124T121500,20251125T121500,20251126T121500,20251127T121500,20251128T121500,20260112T121500,20260113T121500,20260115T121500,20260116T121500,20260119T121500,20260213T121500,20260216T121500,
DTSTAMP:20250408T000000
CREATED:20250408T000000
DESCRIPTION:同一テーマが複数学期で開講されていても、2度以上選択することはできない。 対面(オンライン併用型)
LAST-MODIFIED:20250408T000000
LOCATION:7B106,7C202,クリエイティブメディアラボ
SEQUENCE:0
STATUS:CONFIRMED
SUMMARY:情報メディア実験B
TRANSP:OPAQUE
END:VEVENT
BEGIN:VEVENT
DTSTART;TZID=Asia/Tokyo:20251001T134500
DTEND;TZID=Asia/Tokyo:20251001T150000
RRULE:FREQ=WEEKLY;UNTIL=20260205T130000Z;BYDAY=WE
EXDATE:20251013T134500,20251016T134500,20251103T134500,20251104T134500,20251105T134500,20251107T134500,20251124T134500,20251125T134500,20251126T134500,20251127T134500,20251128T134500,20260112T134500,20260113T134500,20260115T134500,20260116T134500,20260119T134500,20260213T134500,20260216T134500,
DTSTAMP:20250408T000000
CREATED:20250408T000000
DESCRIPTION:同一テーマが複数学期で開講されていても、2度以上選択することはできない。 対面(オンライン併用型)
LAST-MODIFIED:20250408T000000
LOCATION:7B106,7C202,クリエイティブメディアラボ
SEQUENCE:0
STATUS:CONFIRMED
SUMMARY:情報メディア実験B
TRANSP:OPAQUE
END:VEVENT
BEGIN:VEVENT
DTSTART;TZID=Asia/Tokyo:20251003T151500
DTEND;TZID=Asia/Tokyo:20251003T163000
RRULE:FREQ=WEEKLY;UNTIL=20260205T130000Z;BYDAY=FR
EXDATE:20251013T151500,20251016T151500,20251103T151500,20251104T151500,20251105T151500,20251107T151500,20251124T151500,20251125T151500,20251126T151500,20251127T151500,20251128T151500,20260112T151500,20260113T151500,20260115T151500,20260116T151500,20260119T151500,20260213T151500,20260216T151500,
DTSTAMP:20250408T000000
CREATED:20250408T000000
DESCRIPTION:同一テーマが複数学期で開講されていても、2度以上選択することはできない。 対面(オンライン併用型)
LAST-MODIFIED:20250408T000000
LOCATION:7B106,7C202,クリエイティブメディアラボ
SEQUENCE:0
STATUS:CONFIRMED
SUMMARY:情報メディア実験B
TRANSP:OPAQUE
END:VEVENT
BEGIN:VEVENT
DTSTART;TZID=Asia/Tokyo:20260115T151500
DTEND;TZID=Asia/Tokyo:20260115T163000
DTSTAMP:20250408T000000
CREATED:20250408T000000
DESCRIPTION:同一テーマが複数学期で開講されていても、2度以上選択することはできない。 対面(オンライン併用型)
LAST-MODIFIED:20250408T000000
LOCATION:7B106,7C202,クリエイティブメディアラボ
SEQUENCE:0
STATUS:CONFIRMED
SUMMARY:情報メディア実験B
TRANSP:OPAQUE
END:VEVENT
BEGIN:VEVENT
DTSTART;TZID=Asia/Tokyo:20251003T164500
DTEND;TZID=Asia/Tokyo:20251003T180000
RRULE:FREQ=WEEKLY;UNTIL=20260205T130000Z;BYDAY=FR
EXDATE:20251013T164500,20251016T164500,20251103T164500,20251104T164500,20251105T164500,20251107T164500,20251124T164500,20251125T164500,20251126T164500,20251127T164500,20251128T164500,20260112T164500,20260113T164500,20260115T164500,20260116T164500,20260119T164500,20260213T164500,20260216T164500,
DTSTAMP:20250408T000000
CREATED:20250408T000000
DESCRIPTION:同一テーマが複数学期で開講されていても、2度以上選択することはできない。 対面(オンライン併用型)
LAST-MODIFIED:20250408T000000
LOCATION:7B106,7C202,クリエイティブメディアラボ
SEQUENCE:0
STATUS:CONFIRMED
SUMMARY:情報メディア実験B
TRANSP:OPAQUE
END:VEVENT
BEGIN:VEVENT
DTSTART;TZID=Asia/Tokyo:20260115T164500
DTEND;TZID=Asia/Tokyo:20260115T180000
DTSTAMP:20250408T000000
CREATED:20250408T000000
DESCRIPTION:同一テーマが複数学期で開講されていても、2度以上選択することはできない。 対面(オンライン併用型)
LAST-MODIFIED:20250408T000000
LOCATION:7B106,7C202,クリエイティブメディアラボ
SEQUENCE:0
STATUS:CONFIRMED
SUMMARY:情報メディア実験B
TRANSP:OPAQUE
END:VEVENT
BEGIN:VEVENT
DTSTART;TZID=Asia/Tokyo:20251002T121500
DTEND;TZID=Asia/Tokyo:20251002T133000
RRULE:FREQ=WEEKLY;UNTIL=20251219T130000Z;BYDAY=TH
EXDATE:20251013T121500,20251016T121500,20251103T121500,20251104T121500,20251105T121500,20251107T121500,20251124T121500,20251125T121500,20251126T121500,20251127T121500,20251128T121500,
DTSTAMP:20250408T000000
CREATED:20250408T000000
DESCRIPTION:GE70301と同一。 実務経験教員. 対面 情報メディア創成学類生はGC53401を,それ以外の学生はGE70301を履修すること
LAST-MODIFIED:20250408T000000
LOCATION:ユニオン講義室
SEQUENCE:0
STATUS:CONFIRMED
SUMMARY:ディジタルドキュメント
TRANSP:OPAQUE
END:VEVENT
BEGIN:VEVENT
DTSTART;TZID=Asia/Tokyo:20251002T134500
DTEND;TZID=Asia/Tokyo:20251002T150000
RRULE:FREQ=WEEKLY;UNTIL=20251219T130000Z;BYDAY=TH
EXDATE:20251013T134500,20251016T134500,20251103T134500,20251104T134500,20251105T134500,20251107T134500,20251124T134500,20251125T134500,20251126T134500,20251127T134500,20251128T134500,
DTSTAMP:20250408T000000
CREATED:20250408T000000
DESCRIPTION:GE70301と同一。 実務経験教員. 対面 情報メディア創成学類生はGC53401を,それ以外の学生はGE70301を履修すること
LAST-MODIFIED:20250408T000000
LOCATION:ユニオン講義室
SEQUENCE:0
STATUS:CONFIRMED
SUMMARY:ディジタルドキュメント
TRANSP:OPAQUE
END:VEVENT
BEGIN:VEVENT
DTSTART;TZID=Asia/Tokyo:20251003T121500
DTEND;TZID=Asia/Tokyo:20251003T133000
RRULE:FREQ=WEEKLY;UNTIL=20251219T130000Z;BYDAY=FR
EXDATE:20251013T121500,20251016T121500,20251103T121500,20251104T121500,20251105T121500,20251107T121500,20251124T121500,20251125T121500,20251126T121500,20251127T121500,20251128T121500,
DTSTAMP:20250408T000000
CREATED:20250408T000000
DESCRIPTION:GE62501, GE73101と同一。 英語で授業。 G科目. 対面 情報メディア創成学類生はGC55201を、知識情報システム主専攻生はGE73101を、それ以外の学生はGE62501を履修すること。 GE60701「レファレンスサイエンス」を修得済みの者は履修不可
LAST-MODIFIED:20250408T000000
LOCATION:7A210
SEQUENCE:0
STATUS:CONFIRMED
SUMMARY:Human Information Interaction
TRANSP:OPAQUE
END:VEVENT
BEGIN:VEVENT
DTSTART;TZID=Asia/Tokyo:20251003T134500
DTEND;TZID=Asia/Tokyo:20251003T150000
RRULE:FREQ=WEEKLY;UNTIL=20251219T130000Z;BYDAY=FR
EXDATE:20251013T134500,20251016T134500,20251103T134500,20251104T134500,20251105T134500,20251107T134500,20251124T134500,20251125T134500,20251126T134500,20251127T134500,20251128T134500,
DTSTAMP:20250408T000000
CREATED:20250408T000000
DESCRIPTION:GE62501, GE73101と同一。 英語で授業。 G科目. 対面 情報メディア創成学類生はGC55201を、知識情報システム主専攻生はGE73101を、それ以外の学生はGE62501を履修すること。 GE60701「レファレンスサイエンス」を修得済みの者は履修不可
LAST-MODIFIED:20250408T000000
LOCATION:7A210
SEQUENCE:0
STATUS:CONFIRMED
SUMMARY:Human Information Interaction
TRANSP:OPAQUE
END:VEVENT
BEGIN:VEVENT
DTSTART;VALUE=DATE:20250410
DTEND;VALUE=DATE:20250411
DTSTAMP:20220408T000000
CREATED:20220408T000000
STATUS:CONFIRMED
TRANSP:TRANSPARENT
SUMMARY:春A事前登録締め切り日
END:VEVENT
BEGIN:VEVENT
DTSTART;VALUE=DATE:20250425
DTEND;VALUE=DATE:20250426
DTSTAMP:20220408T000000
CREATED:20220408T000000
STATUS:CONFIRMED
TRANSP:TRANSPARENT
SUMMARY:春A履修登録締切日
END:VEVENT
BEGIN:VEVENT
DTSTART;VALUE=DATE:20250513
DTEND;VALUE=DATE:20250514
DTSTAMP:20220408T000000
CREATED:20220408T000000
STATUS:CONFIRMED
TRANSP:TRANSPARENT
SUMMARY:春B事前登録締め切り日
END:VEVENT
BEGIN:VEVENT
DTSTART;VALUE=DATE:20250522
DTEND;VALUE=DATE:20250523
DTSTAMP:20220408T000000
CREATED:20220408T000000
STATUS:CONFIRMED
TRANSP:TRANSPARENT
SUMMARY:春A期末試験
END:VEVENT
BEGIN:VEVENT
DTSTART;VALUE=DATE:20250529
DTEND;VALUE=DATE:20250530
DTSTAMP:20220408T000000
CREATED:20220408T000000
STATUS:CONFIRMED
TRANSP:TRANSPARENT
SUMMARY:春B履修登録締切日
END:VEVENT
BEGIN:VEVENT
DTSTART;VALUE=DATE:20250624
DTEND;VALUE=DATE:20250625
DTSTAMP:20220408T000000
CREATED:20220408T000000
STATUS:CONFIRMED
TRANSP:TRANSPARENT
SUMMARY:春C事前登録締め切り日
END:VEVENT
BEGIN:VEVENT
DTSTART;VALUE=DATE:20250710
DTEND;VALUE=DATE:20250711
DTSTAMP:20220408T000000
CREATED:20220408T000000
STATUS:CONFIRMED
TRANSP:TRANSPARENT
SUMMARY:春C履修登録締切日
END:VEVENT
BEGIN:VEVENT
DTSTART;VALUE=DATE:20250922
DTEND;VALUE=DATE:20250923
DTSTAMP:20220408T000000
CREATED:20220408T000000
STATUS:CONFIRMED
TRANSP:TRANSPARENT
SUMMARY:秋A事前登録締め切り日
END:VEVENT
BEGIN:VEVENT
DTSTART;VALUE=DATE:20251014
DTEND;VALUE=DATE:20251015
DTSTAMP:20220408T000000
CREATED:20220408T000000
STATUS:CONFIRMED
TRANSP:TRANSPARENT
SUMMARY:秋A履修登録締切日
END:VEVENT
BEGIN:VEVENT
DTSTART;VALUE=DATE:20251029
DTEND;VALUE=DATE:20251030
DTSTAMP:20220408T000000
CREATED:20220408T000000
STATUS:CONFIRMED
TRANSP:TRANSPARENT
SUMMARY:秋B事前登録締め切り日
END:VEVENT
BEGIN:VEVENT
DTSTART;VALUE=DATE:20251010
DTEND;VALUE=DATE:20251011
DTSTAMP:20220408T000000
CREATED:20220408T000000
STATUS:CONFIRMED
TRANSP:TRANSPARENT
SUMMARY:秋A期末試験
END:VEVENT
BEGIN:VEVENT
DTSTART;VALUE=DATE:20251117
DTEND;VALUE=DATE:20251118
DTSTAMP:20220408T000000
CREATED:20220408T000000
STATUS:CONFIRMED
TRANSP:TRANSPARENT
SUMMARY:秋B履修登録締切日
END:VEVENT
BEGIN:VEVENT
DTSTART;VALUE=DATE:20251217
DTEND;VALUE=DATE:20251218
DTSTAMP:20220408T000000
CREATED:20220408T000000
STATUS:CONFIRMED
TRANSP:TRANSPARENT
SUMMARY:秋C事前登録締め切り日
END:VEVENT
BEGIN:VEVENT
DTSTART;VALUE=DATE:20260115
DTEND;VALUE=DATE:20260116
DTSTAMP:20220408T000000
CREATED:20220408T000000
STATUS:CONFIRMED
TRANSP:TRANSPARENT
SUMMARY:秋C履修登録締切日
END:VEVENT
END:VCALENDAR"
`;
